# abs-rust

./: Cargo.toml  README.md
crates/abs_rand_module/: Cargo.toml  README.md
crates/abs_rand_module/src/: main.rs
crates/abs_syntax/: Cargo.toml  README.md
crates/abs_syntax/src/: lib.rs  syntax_error.rs  syntax_node.rs
crates/abs_syntax/src/ast/: expr.rs  guard.rs  ident.rs  lit.rs  mod.rs  pattern.rs  stmt.rs  ty.rs
crates/abs_syntax/src/parsing/: lexer.rs  mod.rs  reparsing.rs  text_token_source.rs  text_tree_sink.rs
crates/abs_syntax/src/validation/: mod.rs
crates/parser/: Cargo.toml
crates/parser/src/: event.rs  lib.rs  parser.rs  token_set.rs
crates/parser/src/grammar/: annotations.rs  branches.rs  expressions.rs  gen_args.rs  mod.rs  params.rs  pattern.rs  stmts.rs
crates/parser/src/grammar/items/: class.rs  datatypes.rs  exceptions.rs  export.rs  functions.rs  import.rs  interfaces.rs  method_decls.rs  method_sigs.rs  mod.rs  traits.rs  type_syn.rs
crates/parser/src/syntax_kind/: generated.rs  mod.rs
crates/text_edit/: Cargo.toml
crates/text_edit/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: ast_src.rs  lib.rs  main.rs
xtask/src/codegen/: abs.ungram  mod.rs  syntax.rs
