[package]
name = "abs_syntax"
version = "0.1.0"
authors = ["Daniel <d.drodt@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rowan = "0.10.0"
text_edit = { path = "../text_edit" }
parser = { path = "../parser" }